--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
     - uses: microsoft/setup-msbuild@v1.0.2
     - name: Build
       run: msbuild src/BehaviorsSdk.sln /p:Configuration=Release
+    - name: Run Tests
+      run: dotnet test src/BehaviorsSdk.sln
     - name: Pack Behaviors
       if: success()
       run: msbuild src/Microsoft.Xaml.Behaviors/Microsoft.Xaml.Behaviors.csproj /p:Configuration=Release -t:pack
