--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,24 +10,35 @@ jobs:
   managed-build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
-    - uses: nuget/setup-nuget@v1.0.5
+    
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v1.0.2
+    
     - name: Restore
+      uses: nuget/setup-nuget@v1.0.5
       run: nuget restore src/BehaviorsSdk.sln
-    - uses: microsoft/setup-msbuild@v1.0.2
+    
     - name: Build
       run: msbuild src/BehaviorsSdk.sln /p:Configuration=Release
+    
     - name: Run Tests
-      run: dotnet test src/BehaviorsSdk.sln
+      uses: microsoft/vstest-action@v1.0.0
+      with:
+        testAssembly: '**\bin\Release\UnitTests.dll'
+
     - name: Pack Behaviors
       if: success()
       run: msbuild src/Microsoft.Xaml.Behaviors/Microsoft.Xaml.Behaviors.csproj /p:Configuration=Release -t:pack
+    
     - name: Upload NuGet Artifacts
       if: success()
       uses: actions/upload-artifact@v2
