--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,8 @@ jobs:
     - name: Run Tests
       uses: microsoft/vstest-action@v1.0.0
       with:
-        testAssembly: Test/UnitTests/bin/Release/UnitTests.dll
+        testAssembly: UnitTests.dll
+        searchFolder: .\Test\UnitTests\bin\Release
 
     - name: Pack Behaviors
       if: success()
