--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -34,12 +34,15 @@ resources:
 extends:
   template: azure-pipelines/MicroBuild.1ES.Official.yml@MicroBuildTemplate
   parameters:
-    sdl:
-      sourceAnalysisPool: <AgentPoolPlaceHolder>
     pool:
       name: AzurePipelines-EO
       image: AzurePipelinesWindows2022compliantGPT
       os: windows
+    sdl:
+      sourceAnalysisPool:
+        name: AzurePipelines-EO
+        image: AzurePipelinesWindows2022compliantGPT
+        os: windows
     customBuildTags:
     - ES365AIMigrationTooling
     stages:
