--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -107,6 +107,12 @@ extends:
               !**\*TestAdapter.dll
               !**\obj\**
             runInParallel: true
+        - task: MicroBuildSigningPlugin@4
+          inputs:
+            signType: '$(SignType)'
+            feedSource: 'https://devdiv.pkgs.visualstudio.com/DefaultCollection/_packaging/MicroBuildToolset/nuget/v3/index.json'
+          env:
+            TeamName: '$(TeamName)'
         - task: VSBuild@1
           displayName: Build NuGet package
           inputs:
