--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -34,7 +34,7 @@ extends:
     sdl:
       sourceAnalysisPool:
         name: AzurePipelines-EO
-        image: AzurePipelinesWindows2022compliantGPT
+        image: 1ESPT-Windows2022
         os: windows
     customBuildTags:
     - ES365AIMigrationTooling
