--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -7,6 +7,8 @@ variables:
   value: false
 - name: Codeql.Enabled
   value: true
+- name: Codeql.Language
+  value: csharp
 - name: SignType
   ${{ if eq(variables['Build.OfficialRelease'], 'true') }}:
     value: real
